fixed header layout bugs and change photos cause of copyright issues. embedded a soundcloud player to my aboutme.html page

--- a/Los Mal/main.css
+++ b/Los Mal/main.css
@@ -43,23 +43,21 @@ a {
 
 #header {
     grid-area: header;
-    border: 1px black solid;
+    border-bottom: 1px black solid;
 }
 
 
 #title {
     grid-area: title;
-    border: 1px black solid;
 }
 
 #main {
     grid-area: main;
-    border: 1px black solid;
 }
 
 #footer {
     grid-area: footer;
-    border: 1px black solid;
+    border-top: 1px black solid;
 }
 
 
@@ -69,13 +67,14 @@ a {
     position: fixed;
     width: 100%;
     background-color: #d5c7bc;
+    padding-bottom: 3px;
 }
 
 #header > .icon {
     font-size: 2.5rem;
     position: absolute;
     left: 0;
-    top: 0;
+    top: -1.75vh;
     padding-left: 5px;
 }
 
@@ -95,7 +94,7 @@ a {
     font-size: 2rem;
     position: absolute;
     right: 0;
-    top: 0;
+    top: -1vh;
     text-decoration: none;
     color: #454545;
 }
