--- a/Los Mal/top1_desktop.css
+++ b/Los Mal/top1_desktop.css
@@ -24,7 +24,7 @@
         height: 100vh;
         display: grid;
         grid-template-columns: 100px 250px 1fr 1fr 100px;
-        grid-template-rows: 80px 45px auto 80px;
+        grid-template-rows: 80px 90px auto 80px;
         grid-template-areas:
                 "header header header header header"
                 ". . . . ."
@@ -34,28 +34,25 @@
 
     #header {
         grid-area: header;
-        border: 1px black solid;
+        border-bottom: 1px black solid;
     }
 
 
     #title {
         grid-area: title;
-        border: 1px black solid;
     }
 
     #main {
         grid-area: main;
-        border: 1px black solid;
     }
 
     #side {
         grid-area: side;
-        border: 1px black solid;
     }
 
     #footer {
         grid-area: footer;
-        border: 1px black solid;
+        border-top: 1px black solid;
     }
 
     /* Main */
@@ -108,7 +105,7 @@
         justify-content: space-between;
         align-items: start;
         flex-wrap: wrap;
-        gap: 50px;
+        gap: 65px;
         margin-left:100px;
 
     }
